--- a/src/components/navigation-header/components/primary-nav-link/primary-nav-link.module.css
+++ b/src/components/navigation-header/components/primary-nav-link/primary-nav-link.module.css
@@ -6,7 +6,7 @@
 	align-items: center;
 	gap: 6px;
 	border-radius: 5px;
-	color: var(--token-color-palette-neutral-400);
+	color: var(--token-color-surface-strong);
 	display: flex;
 	padding: 8px;
 
