--- a/src/components/navigation-header/navigation-header.module.css
+++ b/src/components/navigation-header/navigation-header.module.css
@@ -61,7 +61,7 @@
 	align-items: center;
 	display: flex;
 	justify-content: right;
-	gap: 16px;
+	gap: 12px;
 }
 
 /*
